# diet-planner

ai-service/: .gitignore  config.py  constants.py  exceptions.py  main.py  pyproject.toml
ai-service/alternatives/: constants.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
ai-service/classifier/: constants.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
ai-service/core/: llm.py  parser.py  prompt_builder.py
ai-service/planner/: constants.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
ai-service/shared/: schemas.py  utils.py  validators.py
front-end/: index.html  package.json
front-end/src/: App.jsx  index.css
front-end/src/components/Auth/: AuthLayout.jsx  ContinueWithGoogle.jsx
front-end/src/components/Entrance/: Footer.jsx  Header.jsx  LandingPage.jsx
front-end/src/components/User/: UserHeader.jsx  UserSideBar.jsx  Voiceassistant.jsx
front-end/src/components/admin/: AdminHeader.jsx
front-end/src/components/common/: CheckAuth.js  PrivacyPolicy.jsx  TermsOfService.jsx
front-end/src/components/ui/: dialog.jsx
front-end/src/pages/UserPages/: Alternatives.jsx  DietHistory.jsx  DietPlanner.jsx  DietView.jsx  ProgressTracking.jsx  UserDashboard.jsx
front-end/src/pages/auth/: Login.jsx  Register.jsx
front-end/src/store/: store.js
front-end/src/utilities/: LoadingSpinner.jsx
server/: server.js
server/controllers/: alternatives-controller.js  diet-controller.js
server/models/: DietPlan.js
server/routes/: alternatives-routes.js  diet-routes.js
(+2 files in other folders)
